tests/ui/async-await/higher-ranked-auto-trait-11.assumptions.stderr
error: lifetime may not live long enough
  --> $DIR/higher-ranked-auto-trait-11.rs:27:9
   |
LL | impl<'a, T> Foo<'a> for MyType<T>
   |      -- lifetime `'a` defined here
...
LL |         Box::pin(async move { <T as Foo<'a>>::foo().await })
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ coercion requires that `'a` must outlive `'static`

error: implementation of `Send` is not general enough
  --> $DIR/higher-ranked-auto-trait-11.rs:27:9
   |
LL |         Box::pin(async move { <T as Foo<'a>>::foo().await })
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Send` is not general enough
   |
   = note: `Send` would have to be implemented for the type `<T as Foo<'0>>::Future`, for any lifetime `'0`...
   = note: ...but `Send` is actually implemented for the type `<T as Foo<'1>>::Future`, for some specific lifetime `'1`

error: aborting due to 2 previous errors

